Make Teresa Monroe clickable link in about page - opens in new tab

--- a/public/about.html
+++ b/public/about.html
@@ -529,7 +529,7 @@
                             </svg>
                             <h3 style="color: #2c3e50; margin: 0; font-size: 1.5rem; font-weight: 600;">Expert Partnership</h3>
                         </div>
-                        <p style="font-size: 1.1em; line-height: 1.6; margin-bottom: 20px;">We've partnered with <strong>Teresa Monroe</strong>, Europe's leading Customer Experience (CX) and Employee Experience (EX) consulting agency. Whether you need help designing your CX program from the ground up or want expert analysis of your segmentation results, Teresa Monroe brings decades of experience turning customer data into business transformation.</p>
+                        <p style="font-size: 1.1em; line-height: 1.6; margin-bottom: 20px;">We've partnered with <a href="https://www.teresamonroe.com/en" target="_blank" rel="noopener noreferrer" style="text-decoration: none;"><strong>Teresa Monroe</strong></a>, Europe's leading Customer Experience (CX) and Employee Experience (EX) consulting agency. Whether you need help designing your CX program from the ground up or want expert analysis of your segmentation results, Teresa Monroe brings decades of experience turning customer data into business transformation.</p>
                         <div style="display: flex; gap: 16px; flex-wrap: wrap; align-items: center;">
                             <a href="/contact.html" class="btn btn-primary" style="background: #3a863e; color: white; padding: 12px 24px; border-radius: 6px; text-decoration: none; font-weight: 600; transition: background-color 0.2s;">Explore Consulting Services <span aria-hidden="true">→</span></a>
                             <img src="/tm-logo.png" alt="Teresa Monroe" style="height: 24px; opacity: 0.7; margin-left: 8px;" />
