Update Beyond Single Metrics and Complete Customer Picture sections to remove repetition

--- a/public/about.html
+++ b/public/about.html
@@ -389,7 +389,7 @@
                             </svg>
                             Beyond Single Metrics
                         </h3>
-                        <p>Traditional tools measure satisfaction OR loyalty separately. We combine both dimensions to reveal the complete customer picture—this is the revolutionary difference.</p>
+                        <p>Traditional single metrics may create blind spots. A satisfied customer might be shopping competitors, while a loyal customer could be silently frustrated. We combine both dimensions to reveal the complete truth.</p>
                     </div>
                     <div class="benefit">
                         <h3>
@@ -409,7 +409,7 @@
                             </svg>
                             Complete Customer Picture
                         </h3>
-                        <p>Traditional tools show you satisfaction OR loyalty. We combine both to reveal the complete picture—turning static scores into dynamic, actionable strategies that actually move the needle.</p>
+                        <p>See the full story behind every customer. By combining satisfaction and loyalty, we transform static scores into dynamic, actionable strategies that actually move the needle.</p>
                     </div>
                     <div class="benefit">
                         <h3>
