Add ROI FAQ and keywords for site search
Include ROI keywords and a dedicated ROI Score FAQ so /faq search returns results for terms like ROI/return on investment.

--- a/public/faq.html
+++ b/public/faq.html
@@ -1479,7 +1479,7 @@ CUST002,6,4,Jane Doe</pre>
                         </div>
                     </div>
 
-                    <div class="faq-item" data-keywords="generate reports, action plan, data report">
+                    <div class="faq-item" data-keywords="generate reports, action plan, data report, ROI, roi score, strategic priorities">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>What types of reports can I generate?</h3>
                             <span class="faq-toggle">+</span>
@@ -1513,7 +1513,7 @@ CUST002,6,4,Jane Doe</pre>
                         </div>
                     </div>
 
-                    <div class="faq-item" data-keywords="proximity analysis, recommendation score, response concentration">
+                    <div class="faq-item" data-keywords="proximity analysis, recommendation score, response concentration, ROI, return on investment, roi score, action prioritization, impact score, actionability, strategic priorities">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>What advanced analysis features are included?</h3>
                             <span class="faq-toggle">+</span>
@@ -1526,6 +1526,21 @@ CUST002,6,4,Jane Doe</pre>
                                 <li><strong>Response Concentration:</strong> Shows where most responses cluster</li>
                                 <li><strong>Strategic Priorities:</strong> Highlights high-impact opportunities</li>
                             </ul>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="ROI, return on investment, roi score, how is roi calculated, impact score, actionability, action prioritization, strategic priorities">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>How is the ROI Score calculated in the Action Plan?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>The ROI Score is a simple prioritization metric calculated as <strong>Impact × Actionability</strong> on a 1-9 scale.</p>
+                            <ul>
+                                <li><strong>Impact</strong> is rated as: High (3), Medium (2), or Low (1)</li>
+                                <li><strong>Actionability</strong> is rated as: Easy (3), Medium (2), or Hard (1)</li>
+                            </ul>
+                            <p>Higher scores indicate actions that are both high-impact and easier to implement, helping you prioritize where to focus your efforts first.</p>
                         </div>
                     </div>
 
