SEO: index about+FAQ; trim sitemap
Allow indexing for /faq.html with canonical, and restrict sitemap to about+faq only. Noindex non-marketing pages and /tool duplicates to avoid SEO conflicts.

--- a/public/contact.html
+++ b/public/contact.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Contact segmentor.app for tool-related help or to discuss our CX Programme. Get support and learn how we can help transform your customer insights.">
     <meta name="keywords" content="contact segmentor, customer segmentation support, CX programme, customer experience consulting, tool help" />
     <meta name="author" content="segmentor.app" />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="language" content="en" />
     <meta name="revisit-after" content="7 days" />
     
