--- a/public/faq.html
+++ b/public/faq.html
@@ -14,7 +14,8 @@
     <!-- Basic SEO Meta Tags (Minimal as recommended) -->
     <title>FAQ - segmentor.app</title>
     <meta name="description" content="Frequently asked questions about segmentor.app - the professional customer segmentation tool that starts with Apostles Model visualization.">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://segmentor.app/faq.html" />
     
     <!-- Branding -->
     <link rel="stylesheet" href="/assets/css/shared.css">
