--- a/public/tool/about.html
+++ b/public/tool/about.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Learn about segmentor.app, the privacy-first customer segmentation tool. Starts with Apostles Model visualization, then provides powerful analytics and insights. Analyse CSAT, NPS, CES data with complete privacy protection. Your data never leaves your device.">
     <meta name="keywords" content="Apostles Model, Defectors, Loyalists, Advocates, Trolls, CSAT, NPS, CES, Survey, Customer Experience, CX, Employee Experience, EX, Customer Satisfaction, Experience Management, XM, transactional survey, relational survey, statistics, analysis, customer behaviour, call to action, close the loop, delight customers, customer retention, customer segmentation, satisfaction analysis, loyalty measurement, customer insights, data visualization, survey analytics, privacy-first, data security, customer analytics, local processing, no tracking, GDPR compliant" />
     <meta name="author" content="segmentor.app" />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="language" content="en" />
     <meta name="revisit-after" content="7 days" />
     
