--- a/public/pricing.html
+++ b/public/pricing.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting to Brand+...</title>
+    <meta name="robots" content="noindex, nofollow" />
     <meta http-equiv="refresh" content="0; url=/brand-plus.html">
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
