--- a/public/tool/faq.html
+++ b/public/tool/faq.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Frequently asked questions about segmentor.app - the privacy-first customer segmentation tool. Get help with Segmentor, data upload, and tool features.">
     <meta name="keywords" content="segmentor FAQ, customer segmentation help, apostles model questions, data upload help, privacy questions" />
     <meta name="author" content="segmentor.app" />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="language" content="en" />
     
     <!-- Open Graph Meta Tags -->
