Add Cloudflare Web Analytics beacon site-wide and update CSP

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -291,6 +291,7 @@ body {
 }
     </style>
     <script src="/logo-replacement.js"></script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d77bf377e604da0a3435a5817a2e33a"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 <body>
 
