--- a/public/terms.html
+++ b/public/terms.html
@@ -468,5 +468,6 @@ body {
             </div>
         </div>
     </footer>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d77bf377e604da0a3435a5817a2e33a"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
