--- a/public/tool/faq.html
+++ b/public/tool/faq.html
@@ -1467,5 +1467,6 @@ Jane Doe,2,3,jane@example.com,Canada</pre>
             window.location.href = '/';
         }
     </script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d77bf377e604da0a3435a5817a2e33a"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
