--- a/public/brand-plus-auth.html
+++ b/public/brand-plus-auth.html
@@ -202,5 +202,6 @@
             window.location.href = '/brand-plus.html?auth=success';
         }, 500);
     </script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d77bf377e604da0a3435a5817a2e33a"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
