--- a/public/faq.html
+++ b/public/faq.html
@@ -150,6 +150,7 @@
       ]
     }
     </script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d77bf377e604da0a3435a5817a2e33a"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 <body>
 
