--- a/public/index.html
+++ b/public/index.html
@@ -223,6 +223,7 @@
         const hash = window.location.hash;
         window.location.href = '/tool/' + queryString + hash;
     </script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d77bf377e604da0a3435a5817a2e33a"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 <body>
 
