--- a/public/login.html
+++ b/public/login.html
@@ -88,5 +88,6 @@
             window.location.href = '/tm.html' + queryString + hash;
         }, 500);
     </script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d77bf377e604da0a3435a5817a2e33a"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
