--- a/public/pricing.html
+++ b/public/pricing.html
@@ -15,6 +15,7 @@
         // Immediate redirect
         window.location.href = '/brand-plus.html';
     </script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d77bf377e604da0a3435a5817a2e33a"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 <body>
     <p>Redirecting to Brand+ pricing page...</p>
