Add Umami analytics site-wide (alongside Cloudflare), update CSP for cloud.umami.is

--- a/public/tool/faq.html
+++ b/public/tool/faq.html
@@ -1468,5 +1468,6 @@ Jane Doe,2,3,jane@example.com,Canada</pre>
         }
     </script>
     <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d77bf377e604da0a3435a5817a2e33a"}'></script><!-- End Cloudflare Web Analytics -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="7ca02d83-acd6-4fe7-b273-2b1efd01c7bb"></script>
 </body>
 </html>
