Clarify B2B/B2C business context wording in Actions Report.
Add FAQ entries explaining context switching, regeneration requirements, section inclusion rules, and manual edit overwrite behaviour in clear British English.

Made-with: Cursor

--- a/public/faq.html
+++ b/public/faq.html
@@ -1563,6 +1563,50 @@ John Smith,4,8,john@example.com</pre>
                         </div>
                     </div>
 
+                    <div class="faq-item" data-keywords="B2B B2C business context actions report wording">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>What does B2B vs B2C change in the Actions Report?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Choosing <strong>B2B</strong> or <strong>B2C</strong> tailors the report language and recommended actions to your business context.</p>
+                            <p>Your underlying data, segment positions, and calculations stay the same. The strategic framing and wording are what change.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="B2B B2C regenerate report not updated business context">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>Why didn't my Actions Report change after switching B2B/B2C?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Switching business context does not rewrite an already generated report.</p>
+                            <p>After changing between <strong>B2B</strong> and <strong>B2C</strong>, click <strong>Regenerate Report</strong> to apply updated wording and recommendations.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="actions report included sections visible enabled filters settings">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>What is included when I generate an Actions Report?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>The report is generated from sections that are currently visible and enabled, using the filters and settings active at the time of generation.</p>
+                            <p>If a section is hidden or disabled, its findings may be omitted. Re-enable the section and regenerate if you want it included.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="actions report regenerate manual edits overwrite lost text changes">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>Will regenerating overwrite my manual edits in the Actions Report?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Yes. Regenerating replaces current report content with a newly generated version.</p>
+                            <p>If you want to keep manual edits, save your project first before regenerating.</p>
+                        </div>
+                    </div>
+
                     <div class="faq-item" data-keywords="proximity analysis, recommendation score, response concentration, ROI, return on investment, roi score, action prioritization, impact score, actionability, strategic priorities">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>What advanced analysis features are included?</h3>
